; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_amd8111e.c_amd8111e_set_settings.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_amd8111e.c_amd8111e_set_settings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ethtool_cmd = type { i32 }
%struct.amd8111e_priv = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.ethtool_cmd*)* @amd8111e_set_settings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @amd8111e_set_settings(%struct.net_device* %0, %struct.ethtool_cmd* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.ethtool_cmd*, align 8
  %5 = alloca %struct.amd8111e_priv*, align 8
  %6 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.ethtool_cmd* %1, %struct.ethtool_cmd** %4, align 8
  %7 = load %struct.net_device*, %struct.net_device** %3, align 8
  %8 = call %struct.amd8111e_priv* @netdev_priv(%struct.net_device* %7)
  store %struct.amd8111e_priv* %8, %struct.amd8111e_priv** %5, align 8
  %9 = load %struct.amd8111e_priv*, %struct.amd8111e_priv** %5, align 8
  %10 = getelementptr inbounds %struct.amd8111e_priv, %struct.amd8111e_priv* %9, i32 0, i32 0
  %11 = call i32 @spin_lock_irq(i32* %10)
  %12 = load %struct.amd8111e_priv*, %struct.amd8111e_priv** %5, align 8
  %13 = getelementptr inbounds %struct.amd8111e_priv, %struct.amd8111e_priv* %12, i32 0, i32 1
  %14 = load %struct.ethtool_cmd*, %struct.ethtool_cmd** %4, align 8
  %15 = call i32 @mii_ethtool_sset(i32* %13, %struct.ethtool_cmd* %14)
  store i32 %15, i32* %6, align 4
  %16 = load %struct.amd8111e_priv*, %struct.amd8111e_priv** %5, align 8
  %17 = getelementptr inbounds %struct.amd8111e_priv, %struct.amd8111e_priv* %16, i32 0, i32 0
  %18 = call i32 @spin_unlock_irq(i32* %17)
  %19 = load i32, i32* %6, align 4
  ret i32 %19
}

declare dso_local %struct.amd8111e_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @mii_ethtool_sset(i32*, %struct.ethtool_cmd*) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
